tests/baselines/reference/functionCall9.errors.txt
==== tests/cases/compiler/functionCall9.ts (2 errors) ====
    function foo(a?:string, b?:number){};
    foo('foo', 1); 
    foo('foo'); 
    foo('foo','bar');
              ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    foo('foo', 1, 'bar');
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo();